# api/swagger/swagger.json
@@ -300,6 +300,23 @@
           }
         }
       }
+    },
+    "/getRejectReasons.do": {
+      "post": {
+        "operationId": "get reject reasons",
+        "responses": {
+          "200": {
+            "description": "get reject reasons",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RejectReasons"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -1120,6 +1137,31 @@
             "type": "string",
             "description": "notes creation time in format YYYY-MM-dd HH:mm:ss",
             "example": "2017-07-31T12:19:50.000Z"
+          }
+        }
+      },
+      "RejectReasons": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "example": "Reject Reasons"
+          },
+          "message": {
+            "type": "string",
+            "example": "Select your reason for rejection"
+          },
+          "rejectReasons": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "example": [
+              "Not a legitimate business",
+              "Insufficient data",
+              "Already filed for Bankruptcy",
+              "Customer has not provided adequate credit info"
+            ]
           }
         }
       }
